# tapipy

./: .gitignore  CHANGELOG.md  Dockerfile-jupyter  Dockerfile-tests  Makefile  Pipfile  README.md  flake.nix  pyproject-alpha3.toml  pyproject.toml  repo_spec_creation_file.py  repo_spec_creation_script.py  repo_spec_pull_script.py  requirements-jupyter.txt  requirements.txt
.github/workflows/: MergeToProd.yml  main.yml
tapipy/: actors.py  client.py  configuration.py  errors.py  tapis.py  util.py
tapipy/open_workflow_engine/: __init__.py
tapipy/resources/: openapi_v3-actors.yml  openapi_v3-apps.yml  openapi_v3-authenticator.yml  openapi_v3-files.yml  openapi_v3-globus-proxy.yml  openapi_v3-jobs.yml  openapi_v3-meta.yml  openapi_v3-notifications.yml  openapi_v3-pgrest.yml  openapi_v3-pods.yml  openapi_v3-sk.yml  openapi_v3-streams.yml  openapi_v3-systems.yml  openapi_v3-tenants.yml  openapi_v3-tokens.yml  openapi_v3-workflows.yml  resource_etags.json
tapipy/specs/: tapis-project-pods_service-prod-docs-openapi_v3-pods.pickle  tapis-project-tapipy-main-tapipy-resources-openapi_v3-pods.pickle  tapis-project-tapipy-master-tapipy-resources-openapi_v3-actors.pickle  tapis-project-tapipy-master-tapipy-resources-openapi_v3-authenticator.pickle  tapis-project-tapipy-master-tapipy-resources-openapi_v3-files.pickle  tapis-project-tapipy-master-tapipy-resources-openapi_v3-meta.pickle  tapis-project-tapipy-master-tapipy-resources-openapi_v3-sk.pickle  tapis-project-tapipy-master-tapipy-resources-openapi_v3-streams.pickle  tapis-project-tapipy-master-tapipy-resources-openapi_v3-systems.pickle  tapis-project-tapipy-master-tapipy-resources-openapi_v3-tenants.pickle  tapis-project-tapipy-master-tapipy-resources-openapi_v3-tokens.pickle  tapis-project-tapipy-prod-tapipy-resources-openapi_v3-actors.pickle  tapis-project-tapipy-prod-tapipy-resources-openapi_v3-apps.pickle  tapis-project-tapipy-prod-tapipy-resources-openapi_v3-authenticator.pickle  tapis-project-tapipy-prod-tapipy-resources-openapi_v3-files.pickle  tapis-project-tapipy-prod-tapipy-resources-openapi_v3-jobs.pickle  tapis-project-tapipy-prod-tapipy-resources-openapi_v3-meta.pickle  tapis-project-tapipy-prod-tapipy-resources-openapi_v3-notifications.pickle  tapis-project-tapipy-prod-tapipy-resources-openapi_v3-pgrest.pickle  (+23 more)
tests/: README.md  TestConfig.py  TestRetriableDecorator.py  TestUtils.py  config-dev-develop.json  config-local-tenants.json  config-local-tokens.json  configschema.json  mocks.py  run.sh  tapipy-tests.py
